--- a/NoHighlight/NoHighlight.csproj
+++ b/NoHighlight/NoHighlight.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{95FF8421-9E29-44DB-8CE6-DC13498B86FE}</ProjectGuid>
+    <ProjectGuid>{2DACC52A-0D01-415D-A30F-E24E1A7B0FD9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FreezeFrame</RootNamespace>
-    <AssemblyName>FreezeFrame</AssemblyName>
+    <RootNamespace>NoHighlight</RootNamespace>
+    <AssemblyName>NoHighlight</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -51,36 +51,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\3rdParty\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.AnimationModule">
-      <HintPath>..\3rdParty\Managed\UnityEngine.AnimationModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.AssetBundleModule">
-      <HintPath>..\3rdParty\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\3rdParty\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\3rdParty\Managed\UnityEngine.PhysicsModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnimationModule.cs" />
-    <Compile Include="FreezeFrame.cs" />
+    <Compile Include="NoHighlightMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VRCWSLibaryIntegration.cs" />
-    <Compile Include="VRC_FreezeData.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="icons-freeze" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
