--- a/NoHighlight/NoHighlight.csproj
+++ b/NoHighlight/NoHighlight.csproj
@@ -60,5 +60,8 @@
     <Compile Include="NoHighlightMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NoHighlight.json" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
