--- a/WasmConverter/WasmConverter.csproj
+++ b/WasmConverter/WasmConverter.csproj
@@ -59,7 +59,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestMod.dll">
+    <Content Include="WasmLoader.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
