--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -71,9 +71,11 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Objectstore.cs" />
+    <Compile Include="Patches.cs" />
     <Compile Include="Refs\Log.cs" />
     <Compile Include="Refs\GameObject.cs" />
     <Compile Include="Refs\IRef.cs" />
+    <Compile Include="WasmBehavior_Internal.cs" />
     <Compile Include="WasmBehavior.cs" />
     <Compile Include="WasmInteractableAction.cs" />
     <Compile Include="WasmLoaderMod.cs" />
