--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;Debug</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\3rdParty\ml\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\3rdParty\Managed\Assembly-CSharp.dll</HintPath>
@@ -61,12 +62,15 @@
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
       <HintPath>..\3rdParty\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>..\3rdParty\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
       <HintPath>..\3rdParty\Managed\UnityEngine.UIModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Wasmtime.Framework">
       <HintPath>..\Wasmtime.Framework.dll</HintPath>
@@ -79,8 +83,10 @@
     <Compile Include="Log.cs" />
     <Compile Include="Objectstore.cs" />
     <Compile Include="Patches.cs" />
+    <Compile Include="Refs\SystemInt32_Ref.cs" />
+    <Compile Include="Refs\UnityEngineGameObject_Ref.cs" />
     <Compile Include="Refs\Log.cs" />
-    <Compile Include="Refs\GameObject.cs" />
+    <Compile Include="Refs\Custom.cs" />
     <Compile Include="Refs\IRef.cs" />
     <Compile Include="Refs\SystemString_Ref.cs" />
     <Compile Include="WasmBehavior_Internal.cs" />
@@ -89,6 +95,7 @@
     <Compile Include="WasmLoaderMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WasmLoaderBehavior.cs" />
+    <Compile Include="WasmSelectable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="wasmtime.dll">
@@ -96,9 +103,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="memory.wat">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="memory.wat" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
