--- a/WasmConverter/WasmConverter.csproj
+++ b/WasmConverter/WasmConverter.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WasmDataType.cs" />
+    <Compile Include="WasmOperand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
