--- a/FreezeFrame/FreezeFrame.csproj
+++ b/FreezeFrame/FreezeFrame.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\3rdParty\Mods\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -34,6 +34,9 @@
     <Reference Include="0Harmony">
       <HintPath>..\3rdParty\ml\0Harmony.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="ActionMenu">
+      <HintPath>..\3rdParty\Mods\ActionMenu.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\3rdParty\Managed\Assembly-CSharp.dll</HintPath>
