--- a/EnableFingerTrackingByDefault/EnableFingerTrackingByDefault.csproj
+++ b/EnableFingerTrackingByDefault/EnableFingerTrackingByDefault.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EnableFingerTrackingByDefaultMod.cs" />
