--- a/FreezeFrame/FreezeFrame.csproj
+++ b/FreezeFrame/FreezeFrame.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="ActionMenu">
       <HintPath>..\3rdParty\Mods\ActionMenu.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\3rdParty\Managed\Assembly-CSharp.dll</HintPath>
@@ -54,6 +55,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>..\3rdParty\Managed\Unity.TextMeshPro.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\3rdParty\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
@@ -74,6 +79,10 @@
       <HintPath>..\3rdParty\Managed\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\3rdParty\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnimationContainer.cs" />
@@ -83,6 +92,7 @@
     <Compile Include="FreezeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FreezeData.cs" />
+    <Compile Include="FreezeSaveManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="icons-freeze" />
