--- a/CameraAnimation/CameraAnimation.csproj
+++ b/CameraAnimation/CameraAnimation.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CameraAnimation.cs" />
+    <Compile Include="CameraAnimationCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
