--- a/CameraAnimation/CameraAnimation.csproj
+++ b/CameraAnimation/CameraAnimation.csproj
@@ -54,11 +54,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>..\3rdParty\Managed\Unity.TextMeshPro.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\3rdParty\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\3rdParty\Managed\UnityEngine.UI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimationSaveManager.cs" />
     <Compile Include="CameraAnimation.cs" />
     <Compile Include="CameraAnimationCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
