Preload Wasm imports

--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -90,6 +90,12 @@
     <Compile Include="Components\WasmBehavior_Internal.cs" />
     <Compile Include="Components\WasmLoaderBehavior.cs" />
     <Compile Include="Components\WasmSelectable.cs" />
+    <Compile Include="Refs\Wrapper\Custom.cs" />
+    <Compile Include="Refs\Wrapper\Logger.cs" />
+    <Compile Include="Refs\Wrapper\SystemInt32_Ref.cs" />
+    <Compile Include="Refs\Wrapper\SystemString_Ref.cs" />
+    <Compile Include="Refs\Wrapper\TestListGameobject_Ref.cs" />
+    <Compile Include="Refs\Wrapper\UnityEngineGameObject_Ref.cs" />
     <Compile Include="Serialisation\SerialisationManager.cs" />
     <Compile Include="Serialisation\SynchronizedVariable.cs" />
     <Compile Include="TypeWrappers\CVRPlayerApi.cs" />
@@ -99,16 +105,10 @@
     <Compile Include="Examples\Search.cs" />
     <Compile Include="Examples\Example2.cs" />
     <Compile Include="Examples\Example1.cs" />
-    <Compile Include="Log.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Objectstore.cs" />
     <Compile Include="Patches.cs" />
-    <Compile Include="Refs\TestListGameobject_Ref.cs" />
-    <Compile Include="Refs\SystemInt32_Ref.cs" />
-    <Compile Include="Refs\UnityEngineGameObject_Ref.cs" />
-    <Compile Include="Refs\Log.cs" />
-    <Compile Include="Refs\Custom.cs" />
     <Compile Include="Refs\IRef.cs" />
-    <Compile Include="Refs\SystemString_Ref.cs" />
     <Compile Include="WasmBehavior.cs" />
     <Compile Include="WasmInstance.cs" />
     <Compile Include="WasmLoaderMod.cs" />
