--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -120,6 +120,14 @@
   <ItemGroup>
     <None Include="memory.wat" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WrapperCodeGenerator\WrapperCodeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false">
+      <Private>False</Private>
+    </ProjectReference>
+  </ItemGroup>
+  <PropertyGroup>
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+  </PropertyGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
