--- a/WasmLinkerCreator/WasmLinkerCreator.csproj
+++ b/WasmLinkerCreator/WasmLinkerCreator.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -38,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,6 +71,15 @@
       <Project>{b09f6951-4d6c-4977-88c0-1c8863eed47c}</Project>
       <Name>WasmLoader</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WrapperCodeGenerator\WrapperCodeGenerator.csproj">
+      <Project>{48ef0ee7-4f21-4067-8c6d-582fc37e80b8}</Project>
+      <Name>WrapperCodeGenerator</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
+      <Version>4.3.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
