Auto Generate some classes

--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AllowedClasses.txt" />
     <Content Include="wasmtime.dll" />
   </ItemGroup>
   <ItemGroup>
