--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -92,13 +92,15 @@
     <Compile Include="Components\WasmBehavior_Internal.cs" />
     <Compile Include="Components\WasmLoaderBehavior.cs" />
     <Compile Include="Components\WasmSelectable.cs" />
-    <Compile Include="Refs\Wrapper\Custom.cs" />
+    <Compile Include="Refs\Wrapper\CVRPlayerAPI_Ref.cs" />
     <Compile Include="Refs\Wrapper\Logger.cs" />
     <Compile Include="Refs\Wrapper\TestListGameobject_Ref.cs" />
     <Compile Include="Refs\Wrapper\UnityEngineGameObject_Ref.cs" />
     <Compile Include="Serialisation\SerialisationManager.cs" />
     <Compile Include="Serialisation\SynchronizedVariable.cs" />
     <Compile Include="TypeWrappers\CVRPlayerApi.cs" />
+    <Compile Include="TypeWrappers\CVRPlayerApiLocal.cs" />
+    <Compile Include="TypeWrappers\CVRPlayerApiRemote.cs" />
     <Compile Include="TypeWrappers\ListCVRPlayerApi.cs" />
     <Compile Include="TypeWrappers\ListGameobject.cs" />
     <Compile Include="Examples\Play.cs" />
