--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Components\WasmBehavior_Internal.cs" />
     <Compile Include="Components\WasmLoaderBehavior.cs" />
     <Compile Include="Components\WasmSelectable.cs" />
+    <Compile Include="Examples\Arrays.cs" />
+    <Compile Include="Refs\Wrapper\CustomArray_Ref.cs" />
     <Compile Include="Refs\Wrapper\CVRPlayerAPI_Ref.cs" />
     <Compile Include="Refs\Wrapper\Logger.cs" />
     <Compile Include="Refs\Wrapper\TestListGameobject_Ref.cs" />
@@ -119,9 +121,6 @@
   <ItemGroup>
     <Content Include="AllowedClasses.txt" />
     <Content Include="wasmtime.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="memory.wat" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WrapperCodeGenerator\WrapperCodeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false">
