Somwhat working attributes.... finallllllly

--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -49,6 +49,11 @@
       <HintPath>..\3rdParty\ml\MelonLoader.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\3rdParty\Managed\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -342,6 +347,7 @@
     <Compile Include="Objectstore.cs" />
     <Compile Include="Patches.cs" />
     <Compile Include="Refs\IRef.cs" />
+    <Compile Include="VariableDefinition.cs" />
     <Compile Include="WasmBehavior.cs" />
     <Compile Include="WasmInstance.cs" />
     <Compile Include="WasmLoaderMod.cs" />
