--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -343,7 +343,6 @@
     <Compile Include="Examples\Search.cs" />
     <Compile Include="Examples\Example2.cs" />
     <Compile Include="Examples\Example1.cs" />
-    <Compile Include="Logger.cs" />
     <Compile Include="Objectstore.cs" />
     <Compile Include="Patches.cs" />
     <Compile Include="Refs\IRef.cs" />
@@ -352,6 +351,7 @@
     <Compile Include="WasmInstance.cs" />
     <Compile Include="WasmLoaderMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WasmManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AllowedClasses.txt" />
