Add Conv_R4/8 I4/8 Box

--- a/WasmLoader/WasmLoader.csproj
+++ b/WasmLoader/WasmLoader.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Components\WasmLoaderBehavior.cs" />
     <Compile Include="Components\WasmSelectable.cs" />
     <Compile Include="Examples\Arrays.cs" />
+    <Compile Include="Refs\Wrapper\CustomBox_Ref.cs" />
     <Compile Include="Refs\Wrapper\CustomArray_Ref.cs" />
     <Compile Include="Refs\Wrapper\CVRPlayerAPI_Ref.cs" />
     <Compile Include="Refs\Wrapper\Logger.cs" />
